# mds

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
dependencies/: database.py
migrations/: env.py
migrations/fixtures/: stocks.csv
migrations/versions/: 72458f51d92d_.py
models/: stocks.py
tests/: .coverage  example.db  test_main.py
