[tool.poetry]
name = "mds"
version = "0.1.0"
description = ""
authors = ["Nikola Mutic <muticnikola23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
uvicorn = "^0.32.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
